# -a

./: .env.a10.production.example  .env.example  .env.local-gpu.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_fix_retrieved_evidence_uniqueness.py
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/app/api/v1/: complaints.py  metrics.py  router.py
backend/app/core/: config.py  logging.py  tracing.py
backend/app/db/: session.py
backend/app/domain/: enums.py  errors.py  schemas.py
backend/app/evaluation/: __init__.py  business_metrics.py  dataset.py  performance.py  retrieval_metrics.py  runner.py
backend/app/gateways/: __init__.py  _base.py  embeddings.py  llm.py  reranker.py
backend/app/knowledge/: chunking.py  masking.py
backend/app/observability/: metrics.py
backend/app/retrieval/: __init__.py  contracts.py  elastic_store.py  hybrid.py  metrics.py  milvus_store.py  template_store.py
backend/app/workflow/: __init__.py  service.py
backend/scripts/: run_evaluation.py  seed_sample_knowledge.py
backend/tests/: conftest.py
backend/tests/contract/: test_elasticsearch_contract.py  test_milvus_contract.py  test_mysql_contract.py  test_redis_contract.py  test_service_health.py
backend/tests/integration/: test_end_to_end_complaint.py
backend/tests/performance/: run_load.py
backend/tests/stubs/: model_server.py
backend/tests/unit/: test_project_layout.py
(+91 files in other folders)
