[project]
name = "suzhida"
version = "0.1.0"
description = "诉智达 - 投诉智能处置与闭环管理系统"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.41",
    "alembic==1.15.2",
    "pymysql==1.1.1",
    "langgraph==1.0.5",
    "httpx==0.28.1",
    "pymilvus==2.5.10",
    "elasticsearch==8.17.2",
    "redis==5.2.1",
    "structlog==25.3.0",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "mypy==1.15.0",
    "ruff==0.11.8",
    "respx==0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
